// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Auctions|CreateAuction default 1`] = `
<form
  onSubmit={[Function]}
>
  <h1
    className="MuiTypography-root MuiTypography-headline MuiTypography-gutterBottom"
  >
    Create Auction
  </h1>
  <div
    className="CreateAuction-formRow"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth CreateAuction-formInput"
    >
      <label
        className="MuiFormLabel-root MuiFormLabel-required MuiInputLabel-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
        htmlFor="name"
      >
        Name
        <span
          className="MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input MuiInput-input"
          disabled={false}
          id="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-raised MuiButton-raisedPrimary"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="submit"
  >
    <span
      className="MuiButton-label"
    >
      Create
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</form>
`;

exports[`Storyshots Auctions|CreateAuction error 1`] = `
<form
  onSubmit={[Function]}
>
  <h1
    className="MuiTypography-root MuiTypography-headline MuiTypography-gutterBottom"
  >
    Create Auction
  </h1>
  <div
    className="CreateAuction-formRow"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth CreateAuction-formInput"
    >
      <label
        className="MuiFormLabel-root MuiFormLabel-error MuiInputLabel-error MuiFormLabel-required MuiInputLabel-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
        htmlFor="name"
      >
        Name
        <span
          className="MuiFormLabel-asterisk MuiFormLabel-error MuiInputLabel-error"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-error MuiInput-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <input
          aria-describedby="name-helper-text"
          aria-invalid={true}
          className="MuiInputBase-input MuiInput-input"
          disabled={false}
          id="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <p
        className="MuiFormHelperText-root MuiFormHelperText-error MuiFormHelperText-required"
        id="name-helper-text"
      >
        there was an error
      </p>
    </div>
  </div>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-raised MuiButton-raisedPrimary"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="submit"
  >
    <span
      className="MuiButton-label"
    >
      Create
    </span>
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</form>
`;

exports[`Storyshots Auctions|CreateAuction loading 1`] = `
<form
  onSubmit={[Function]}
>
  <h1
    className="MuiTypography-root MuiTypography-headline MuiTypography-gutterBottom"
  >
    Create Auction
  </h1>
  <div
    className="CreateAuction-formRow"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth CreateAuction-formInput"
    >
      <label
        className="MuiFormLabel-root MuiFormLabel-required MuiInputLabel-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
        htmlFor="name"
      >
        Name
        <span
          className="MuiFormLabel-asterisk"
        >
           *
        </span>
      </label>
      <div
        className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          className="MuiInputBase-input MuiInput-input"
          disabled={false}
          id="name"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-raised MuiButton-raisedPrimary MuiButton-disabled"
    disabled={true}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label"
    >
      Create
    </span>
  </button>
  <div
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate CreateAuction-buttonProgress"
    role="progressbar"
    style={
      Object {
        "height": 32,
        "width": 32,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
</form>
`;
